resources/deploy/cargo/cargo-deployment-yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cargo-app-yaml
    app.kubernetes.io/component: cargo-app-yaml
    app.kubernetes.io/instance: cargo-app-yaml
    app.kubernetes.io/name: cargo-app-yaml
    app.openshift.io/runtime: cargo-app-yaml
    app.openshift.io/runtime-version: latest
  name: cargo-app-yaml
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cargo-app-yaml
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: cargo-app-yaml
        deployment: cargo-app-yaml
    spec:
      containers:
      - image: cargo-app:latest
        imagePullPolicy: IfNotPresent
        name: cargo-app-yaml
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
