resources/deploy/cargo/cargo-route-yaml.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cargo-app-yaml
    app.kubernetes.io/component: cargo-app-yaml
    app.kubernetes.io/instance: cargo-app-yaml
    app.kubernetes.io/name: cargo-app-yaml
    app.kubernetes.io/part-of: cargo-app-yaml
  name: cargo-app-yaml
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cargo-app-yaml
    weight: 100
  wildcardPolicy: None
